inter component communication

--- a/app03/src/app/consumers-list/consumers-list.component.html
+++ b/app03/src/app/consumers-list/consumers-list.component.html
@@ -6,7 +6,7 @@
         <div class="col">Consumer Name</div>
         <div class="col-2">Mobile</div>
         <div class="col">Mail</div>
-        <div class="col-2"></div>
+        <div class="col-3">Actions</div>
     </div>
     
     <p class="alert alert-info fw-bold p-4" *ngIf="!consumers || consumers.length===0">
@@ -17,11 +17,12 @@
         <div class="row border-bottom border-primary p-2" *ngFor="let c of consumers">
             <div class="col-2 text-right">{{c.id}}</div>
             <div class="col">{{c.name}}</div>
-            <div class="col-2">{{c.mobile}}</div>
+            <div class="col-2 text-center">{{c.mobile}}</div>
             <div class="col">{{c.mailId}}</div>
-            <div class="col-2">
+            <div class="col-3 text-center">
                 <a class="btn btn-sm btn-info mr-2" [routerLink]="['/edit',c.id]">EDIT</a>
-                <button class="btn btn-sm btn-danger" type="button" (click)="remove(c.id)">DELETE</button>
+                <button class="btn btn-sm btn-danger mr-2" type="button" (click)="remove(c.id)">DELETE</button>
+                <a class="btn btn-sm btn-secondary" [routerLink]="['/txns',c.id]">TRANSACTIONS</a>
             </div>
         </div>
     </div>
