--- a/app03/src/app/txns/txns.component.html
+++ b/app03/src/app/txns/txns.component.html
@@ -1,4 +1,3 @@
-
 <section class="m-4 col-sm-9 mx-auto p-4" *ngIf="!consumer">
     <p class="alert alert-danger fw-bold p-4">
         Consumer details not found!
@@ -17,18 +16,27 @@
         <div class="col-2">Actions</div>
     </div>
 
-    <app-txns-form></app-txns-form>
-    
+    <app-txns-form (txnFormSubmit)="add($event)"></app-txns-form>
+
     <p class="alert alert-info fw-bold p-4" *ngIf="!txns || txns.length===0">
         No records to display
     </p>
 
     <div *ngIf="txns && txns.length>0">
-        <app-txn-details 
-            *ngFor="let t of txns" 
-            [txn]="t" 
-            (delBtnClicked)="remove(t.id)">
-        </app-txn-details>
+        <div *ngFor="let t of txns">
+            <app-txn-details 
+                [txn]="t" 
+                (editBtnClicked)="markEditable(t.id)"
+                (delBtnClicked)="remove(t.id)" 
+                *ngIf="!t.isEditing">
+            </app-txn-details>
+            <app-txns-form 
+                [txn]="t" 
+                (txnFormSubmit)="update($event)" 
+                *ngIf="t.isEditing">
+            </app-txns-form>
+        </div>
+
     </div>
-    
+
 </section>
