--- a/app06/src/app/consumer/consumer.component.html
+++ b/app06/src/app/consumer/consumer.component.html
@@ -1,1 +1,4 @@
-<p>consumer works!</p>
+<div class="col-sm-10 mx-auto p-4">
+    <button class="btn btn-sm btn-danger" (click)="signOut()">Sign Out</button>
+    <h4>Welcome! {{userName}}! Consumer Dashboard</h4>
+</div>
