--- a/app06/src/app/login/login.component.html
+++ b/app06/src/app/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+<div class="col-sm-5 mx-auto p-4">
+
+    <p class="alert alert-danger p-4 fw-bold" *ngIf="errMsg">
+        {{errMsg}}
+    </p>
+
+    <form (ngSubmit)="formSubmited()">
+        <div class="form-group">
+            <label class="col-form-label">User Name</label>
+            <input type="text" name="unm" [(ngModel)]="userName" class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label class="col-form-label">Password</label>
+            <input type="password" name="pwd" [(ngModel)]="password" class="form-control"/>
+        </div>
+        <div class="d-grid">
+            <button class="btn btn-primary mt-2">Sign In</button>
+        </div>
+    </form>
+</div>
