--- a/app06/src/app/nav-bar/nav-bar.component.html
+++ b/app06/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/">{{title}}</a>
+      <a class="navbar-brand" [routerLink]="''">{{title}}</a>
     </div>
 </nav>
